Fixed/Added Basic Footer
I fixed the footer on the home page, and then duplicated it across all
other pages. At the moment it may look odd on certain pages, but this is
because they don't have enough content on yet, and is not a bug with my
code.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,7 +91,6 @@
 }
 
 .main-footer {
-	margin-top: 101%;
 	background-color: #564800;
 	position: absolute;
 	left: 0px;
@@ -184,7 +183,10 @@
 
 .social-text {
 	color: #fff;
-	margin-left: -51px;
+	width: 99px;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 20px;
 }
 
 #facebook-text {
